# wxEncodingDetection

./: CMakeLists.txt
inc/wxEncodingDetection/: wxEncodingDetection.h  wxNoConv.h  wxTextInputStreamOnString.h  wxTextOutputStreamOnString.h  wxTextOutputStreamWithBOM.h
src/: StdWx.h  wxEncodingDetection.cpp  wxMLangConvertCharset.cpp  wxMLangConvertCharset.h  wxMultiLanguage.cpp  wxMultiLanguage.h  wxTextInputStreamOnString.cpp  wxTextOutputStreamOnString.cpp  wxTextOutputStreamWithBOM.cpp
